# gk

./: Cargo.toml
client/: Cargo.toml  water.md
client/assets/: autotiled.tmx  map.heightmap  map.tmx  offlinetutorial.heightmap  offlinetutorial.tmx
client/src/: game_mode.rs  lib.rs  main.rs  map.rs  playing_state.rs
client/src/ecs/: components.rs  resources.rs
client/src/ecs/systems/: camera.rs  mod.rs  render_map.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  networking_core.rs  nexus_core.rs  session.rs
server/src/realm/: mod.rs  realm_core.rs  realm_state.rs
server/src/realm/ecs/: components.rs  mod.rs  resources.rs
server/src/realm/ecs/systems/: collision.rs
shared/: Cargo.toml
shared/src/: build.rs  client_messages.rs  collision.rs  core.rs  frame.rs  identifier.rs  lib.rs  macros.rs  server_messages.rs
