[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.48.0", features = [ "full" ] }
tokio-util = { version = "0.7.16", features = ["codec"] }
futures = "0.3"
log = "0.4.25"
simple_logger = "5.0.0"
dashmap = "6.1.0"
uuid = "1.18.1"
bevy_ecs = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parry2d = "0.25.3"
nalgebra = "0.34.1"
