[package]
name = "shared"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = [ "full" ] }
tokio-util = { version = "0.7.16", features = ["codec"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
